student card added but has bug
