# db/src/schema/users.ts
@@ -25,6 +25,14 @@ export const usersTable = pgTable("users", {
   gender: text("gender"),
   joiningDate: timestamp("joining_date", { withTimezone: true }),
   branchId: integer("branch_id").references(() => branchesTable.id),
+  nameUrdu: text("name_urdu"),
+  fatherName: text("father_name"),
+  session: text("session"),
+  semesterTerm: text("semester_term"),
+  shift: text("shift"),
+  rollNo: text("roll_no"),
+  regNo: text("reg_no"),
+  department: text("department"),
   isEmailVerified: boolean("is_email_verified").notNull().default(false),
   isIdentityVerified: boolean("is_identity_verified").notNull().default(false),
   failedLoginAttempts: integer("failed_login_attempts").notNull().default(0),
